[package]
name = "net-easy-download"
version = "0.1.0"
edition = "2024"
authors = ["Y-ASLant"]
description = "基于 Rust + ratatui 的网易云音乐终端下载工具"
repository = "https://github.com/Y-ASLant/NetEasyDownload"
license = "MIT"
keywords = ["netease", "music", "download", "tui", "terminal"]
categories = ["command-line-utilities", "multimedia"]
readme = "README.md"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
crossterm = "0.29.0"
ecb = "0.1.2"
hex = "0.4.3"
md5 = "0.8.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "brotli", "gzip", "rustls-tls"] }
serde_json = "1.0.145"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
